--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christmas Gift</title>
 
+    <link rel="icon" href="./sectiontwo/gift2.png" sizes="16x16">
+
     <!-- css -->
     <link rel="stylesheet" href="./style.css" type="text/css" />
 
 </head>
 <body>
+
+    <div class="overlay">
+        <a href="javascript:void(0);" class="click">
+            <img src="./sectiontwo/gift2.png" alt="">
+        </a>
+    </div>
+
+    <!-- audio -->
+    <audio src="./audio/christmassong.mp3" id="audio" controls></audio>
+    <!-- audio -->
 
     <!-- first page -->
     <section class="skysection">
